# c-snippets

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  appveyor.yml
src/: CMakeLists.txt  access_string.c  array_index.c  array_len.c  bswap.c  bswap.h  byte_ordering.c  egg_dropping_puzzle.c  function_pointer.c  function_pointer01.c  function_pointer02.c  getopt01.c  pahole.c  precedence01.c  recurse_largest_element.c  strange_main_twitter.c
src/crc/: crc.c  crc.h  main.c
